base/keycloak/keycloak-defaultbackend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-defaultbackend-deployment
  labels:
    app: keycloak-defaultbackend
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: keycloak-defaultbackend
  template:
    metadata:
      labels:
        app: keycloak-defaultbackend
    spec:
      containers:
      - name: defaultbackend
        image: k8s.gcr.io/defaultbackend-amd64:1.5
        resources:
          requests:
            memory: 10M
            cpu: 5m
          limits:
            memory: 10M
        ports:
        - containerPort: 8080
          name: http
