base/keycloak/keycloak-defaultbackend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-defaultbackend-service
  labels:
    app: keycloak-defaultbackend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: keycloak-defaultbackend
