base/keycloak/keycloak-admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-admin-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/app-root: /admin
    nginx.ingress.kubernetes.io/auth-tls-secret: default/admin-ca-config
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
spec:
  tls:
  - hosts:
      - keycloak-admin.bpsusine.com
    secretName: keycloak-admin-cert
  rules:
  - host: keycloak-admin.bpsusine.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              name: http
