base/keycloak/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"

spec:
  tls:
  - hosts:
      - keycloak.bpsusine.com
    secretName: keycloak-cert
  rules:
  - host: keycloak.bpsusine.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              name: http
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: keycloak-defaultbackend-service
            port:
              name: http
